[package]
name = "trawler-mysql"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

[features]
orchestration = ["tsunami", "rusoto_core", "rusoto_sts"]
default = []

[dependencies]
trawler = "0.5.3"
mysql_async = "0.14"
tokio-core = "0.1"
clap = "2.31"
futures = "0.1"
chrono = "0.4"

tsunami = { version = "0.5.10", optional = true }
rusoto_core = { version = "0.31", optional = true }
rusoto_sts = { version = "0.31", optional = true }

[[bin]]
name = "trawler-mysql"
path = "src/main.rs"

[[bin]]
name = "trawler-mysql-ec2"
path = "src/ec2.rs"
required-features = ["orchestration"]
