[package]
name = "trawler-mysql"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[features]
orchestration = ["tsunami", "rusoto_core", "rusoto_sts", "failure", "ssh2", "shellwords", "yansi"]
default = []

[dependencies]
trawler = "0.7.0-alpha.1"
mysql_async = "0.21.0-alpha.2"
tokio = "0.2.0-alpha.5"
clap = "2.31"
futures-core-preview = "0.3.0-alpha.18"
futures-util-preview = "0.3.0-alpha.18"
chrono = "0.4"

yansi = { version = "0.5", optional = true }
ssh2 = { version = "0.3", optional = true }
shellwords = { version = "1", optional = true }
failure = { version = "0.1.1", optional = true }
rusoto_core = { optional = true, version = "0.40" }
rusoto_sts = { optional = true, version = "0.40" }
tsunami = { optional = true, version = "0.9" }

[[bin]]
name = "lobsters"
path = "src/main.rs"

[[bin]]
name = "lobsters-ec2"
path = "src/ec2.rs"
required-features = ["orchestration"]
