[package]
name = "trawler-mysql"
version = "0.3.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

[features]
orchestration = ["tsunami", "rusoto_core", "rusoto_sts", "failure", "ssh2", "shellwords", "yansi", "ctrlc"]
default = []

[dependencies]
trawler = "0.8"
mysql_async = "0.22.0"
tokio = { version = "0.2.0", features = ["full"] }
clap = "2.31"
futures-core = "0.3.0"
futures-util = "0.3.0"
chrono = "0.4"

yansi = { version = "0.5", optional = true }
ctrlc = { version = "3.1", optional = true }
ssh2 = { version = "0.8", optional = true }
shellwords = { version = "1", optional = true }
failure = { version = "0.1.1", optional = true }
rusoto_core = { optional = true, version = "=0.43.0-beta.1" }
rusoto_sts = { optional = true, version = "=0.43.0-beta.1" }
tsunami = { optional = true, version = "=0.11.0-beta.2" }

[[bin]]
name = "lobsters"
path = "src/main.rs"

[[bin]]
name = "lobsters-ec2"
path = "src/ec2.rs"
required-features = ["orchestration"]
