[package]
name = "noria-common"
version = "0.4.0"
edition = "2018"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
license = "MIT OR Apache-2.0"

description = "Internal noria-server crate"
repository = "https://github.com/mit-pdos/noria.git"
homepage = "https://pdos.csail.mit.edu/noria"

keywords = ["internal"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
arccstr = "1.2.0"
noria = { version = "0.4.0", path = "../../noria" }
chrono = { version = "0.4.0", features = ["serde"] }
serde_derive = "1.0.8"
serde = { version = "1.0.8", features = ["rc"] }
petgraph = { version = "0.5", features = ["serde-1"] }
