[package]
name = "dataflow"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
publish = false

[dependencies]
bincode = "1.0.0"
evmap = { git = "https://github.com/jonhoo/rust-evmap", branch = "indexmap" }
fnv = "1.0.5"
futures = "0.1"
itertools = "0.8"
nom-sql = "0.0.9"
indexmap = "1.1.0"
rand = "0.7"
regex = "1"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
stream-cancel = "0.4"
tokio = "0.1"
vec_map = { version = "0.8.0", features = ["eders"] }
hyper = "0.12.0"
tempfile = "3.0.2"
jemallocator = "0.3"

# need features
backtrace = { version = "0.3.2", features = ["serialize-serde"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }
timekeeper = { version = "0.3.2", default-features = false }
rocksdb = {version = "0.12.2", default-features = false, features = ["lz4"] }

# local deps
common = { path = "../common" }
noria = { path = "../../noria" }
