[package]
name = "dataflow"
version = "0.3.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
publish = false
edition = "2018"

[target.'cfg(not(target_env="msvc"))'.dependencies]
jemallocator = "0.3"

[dependencies]
bincode = "1.0.0"
evmap = { version = "8", features = ["indexed"] }
fnv = "1.0.5"
futures-util = "0.3.0"
itertools = "0.8"
nom-sql = "0.0.10"
indexmap = "1.1.0"
rand = "0.7"
regex = "1"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
stream-cancel = "0.5.0"
tokio = { version = "0.2.0" }
vec_map = { version = "0.8.0", features = ["eders"] }
tempfile = "3.0.2"

# need features
backtrace = { version = "0.3.2", features = ["serialize-serde"] }
petgraph = { version = "0.5", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }
timekeeper = { version = "0.3.2", default-features = false }
rocksdb = {version = "0.13", default-features = false, features = ["lz4"] }

# local deps
common = { path = "../common" }
noria = { path = "../../noria" }
