[package]
name = "mir"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
publish = false

[dependencies]
nom-sql = "0.0.7"
regex = "1"
slog = "2.4.0"
petgraph = { version = "0.4.11", features = ["serde-1"] }

# local deps
common = { path = "../common" }
dataflow = { path = "../dataflow" }
