[package]
name = "noria-mir"
version = "0.4.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]

[dependencies]
nom-sql = "0.0.11"
regex = "1.0.0"
slog = "2.4.0"
petgraph = { version = "0.5", features = ["serde-1"] }

# local deps
common = { version = "0.4.0", path = "../common", package = "noria-common" }
dataflow = { version = "0.4.0", path = "../dataflow", package = "noria-dataflow" }
