[package]
name = "noria-dataflow"
version = "0.7.0"
edition = "2018"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
license = "MIT OR Apache-2.0"

description = "Internal noria-server crate"
repository = "https://github.com/mit-pdos/noria.git"
homepage = "https://pdos.csail.mit.edu/noria"

keywords = ["internal"]

[badges]
maintenance = { status = "experimental" }

[target.'cfg(not(target_env="msvc"))'.dependencies]
jemallocator = "0.3"

[dependencies]
bincode = "1.0.0"
evmap = { version = "=11.0.0-alpha.1", features = ["eviction"] }
hashbag = "0.1.2"
ahash = "0.3"
futures-util = "0.3.0"
itertools = "0.9"
nom-sql = "0.0.11"
indexmap = "1.1.0"
rand = "0.7"
regex = "1"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
stream-cancel = "0.6.1"
tokio = { version = "0.2.0", features = ["stream"] }
vec_map = { version = "0.8.0", features = ["eders"] }
tempfile = "3.0.2"

# need features
petgraph = { version = "0.5", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }
timekeeper = { version = "0.3.2", default-features = false }
rocksdb = {version = "0.14", default-features = false, features = ["lz4"] }

# local deps
common = { version = "0.7.0", path = "../common", package = "noria-common" }
noria = { version = "0.7.0", path = "../../noria" }
